--- a/.github/workflows/test-gmp.yaml
+++ b/.github/workflows/test-gmp.yaml
@@ -1,6 +1,7 @@
 on:
   push:
   pull_request:
+  workflow_dispatch
 
 jobs:
   R-CMD-check:
@@ -14,8 +15,6 @@ jobs:
         config:
           - {os: macos-10.15}
           - {os: macos-11}
-          - {os: windows-latest}
-          - {os: ubuntu-latest}
 
     steps:
       - uses: r-lib/actions/setup-r@v1
@@ -23,5 +22,5 @@ jobs:
       - name: test gmp
         shell: bash
         run: |
-          R -e "install.packages('gmp', repos = 'https://cran.r-project.org')"
+          R -e "install.packages('gmp', repos = 'https://mac.r-project.org')"
           R -e "S <- gmp::Stirling2(50,10)"
